align-title-fix

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: #3a3a3a;
     color: #c3c3c3;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
+    display: grid;
     place-content: center;
     min-height: 100vh;
 }
